  in the org.qtproject.QtDBus namespace. When parsing such annotations
  both the old and new namespaces are accepted.

* QtDBus error codes have been updated to be on the org.qtproject.QtDBus.Error
  namespace.

QtConcurrent
------------

* QtConcurrent is no longer in QtCore, but forms its own library now.
  QMake-based projects can use
    QT += concurrent
  to include the new library.

QtOpenGL
--------

* Most of the classes in this module (with the notable exception of QGLWidget)
  now have equivalents in QtGui, along with the naming change QGL -> QOpenGL.
  The classes in QtOpenGL that have equivalents in QtGui can now be considered
  deprecated.
* QGLPixelBuffer is now deprecated and implemented in terms of a hidden
  QGLWidget and a QOpenGLFramebufferObject. It is recommended that applications
  using QGLPixelBuffer for offscreen rendering to a texture switch to using
  QOpenGLFramebufferObject directly instead, for improved performance.

QtScript
--------
* [QTBUG-2124]  Added default conversion for long and unsigned long.
* [QTBUG-6133]  Fixed QScriptContextInfo::functionMetaIndex() for overloaded
  slots.
* [QTBUG-15213] Doc: Added missing properties to the ECMAScript reference.
* [QTBUG-15956] Doc: Removed wrong information about Error .stack properties.
* [QTBUG-17915] Fixed a crash when a JS property descriptor was only partially
  defined.
* [QTBUG-18188] Fixed a regression that caused contexts created by
  QScriptEngine::pushContext() to inherit the parent context's scope.
* [QTBUG-18201] Suppressed 'LEAK' messages on stderr at application exit.
* [QTBUG-20378] Fixed QtScriptTools compilation when some features are disabled.
* [QTBUG-20845] Fixed a precision bug in the calculator example.
* [QTBUG-21548] Fixed a crash in QScriptEngineDebugger when the QScriptEngine
  being debugged was deleted.
* [QTBUG-21760] Fixed a crash when accessing QObject properties through an
  activation object.